# inspect-sandbox

./: AGENT.md  Makefile  README.md  pyproject.toml
skills/inspect-sandbox/: Makefile  README.md  SKILL.md  inspector.html
skills/inspect-sandbox/evals/: evals.json
skills/inspect-sandbox/scripts/: generate_diagrams.py  mermaid-directive.md  sandbox_inspect.sh  screenshot_report.py
