[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "inspect-sandbox"
version = "0.0.1"
description = "inspect-sandbox -- Inspects a Linux container or sandbox environment and produces a structured HTML report with Mermaid diagrams and a downloadable PDF. Covers filesystem mounts, process security context, network configuration, and runtime availability."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "David Kierans", email = "dave@abcdef.ai" }]
keywords = ["inspect-sandbox", "sandbox", "container", "security", "mermaid", "devtools", "linux", "agent", "skill"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "black>=24.0",
    "isort>=5.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=scripts"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.black]
line-length = 119
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 119
